[fix] アイコンのパス指定ミスを修正

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="sticky top-0 flex h-16 text-slate-900 bg-slate-100 border-b border-slate-200 z-50">
         <div class="flex text-xl place-items-center">
-            <img src="../../img/icon.svg" class="h-8 mx-4">
+            <img src="./img/icon.svg" class="h-8 mx-4">
             <span class="mx-2">TailwindCSS Development Support Tools</span>
         </div>
         <div class="flex place-items-center text-lg">
