--- a/index.html
+++ b/index.html
@@ -11,29 +11,30 @@
 </head>
 
 <body>
-    <header class="sticky top-0 flex h-16 text-slate-900 bg-slate-100 border-b border-slate-200 z-50">
+    <header
+        class="sticky top-0 flex justify-between w-full h-16 text-slate-900 bg-slate-100 border-b border-slate-200 z-50">
         <div class="flex text-xl place-items-center">
-            <img src="./img/icon.svg" class="h-8 mx-4">
-            <span class="mx-2">TailwindCSS Development Support Tools</span>
+            <img src="./img/icon.svg" class="h-8 mx-8 md:mx-4">
+            <span class="hidden md:inline mx-2">TailwindCSS Development Support Tools</span>
         </div>
         <div class="flex place-items-center text-lg">
             <a href="./html/usage/index.html"
-                class="px-3 py-1 m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Usage</a>
+                class="px-3 py-1 sm:m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Usage</a>
             <a href="./html/divTools/index.html"
-                class="px-3 py-1 m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Div
-                Tools</a>
+                class="px-3 py-1 sm:m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Div
+                <span class="hidden lg:inline">Tools</span></a>
             <a href="./html/textTools/index.html"
-                class="px-3 py-1 m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Text
-                Tools</a>
+                class="px-3 py-1 sm:m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Text
+                <span class="hidden lg:inline">Tools</span></a>
             <a href="./html/imgTools/index.html"
-                class="px-3 py-1 m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Image
-                Tools</a>
+                class="px-3 py-1 sm:m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Image
+                <span class="hidden lg:inline">Tools</span></a>
         </div>
     </header>
 
-    <div class="container mx-auto my-12 grid grid-cols-1 xl:grid-cols-2 gap-8 w-full" id="contentsBlocks">
+    <div class="container px-8 mx-auto my-12 grid grid-cols-1 xl:grid-cols-2 gap-8 w-full" id="contentsBlocks">
         <div
-            class="border-2 border-slate-200 rounded-xl h-full w-full relative hover:scale-125 hover:z-50 hover:shadow-2xl duration-500 hoverable">
+            class="border-2 border-slate-200 rounded-xl h-full w-full relative xl:hover:scale-125 xl:hover:z-50 xl:hover:shadow-2xl duration-500 hoverable">
             <img src="./img/usagePreview.png" class="rounded-xl">
             <p
                 class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-100 bottom-0 w-full">
@@ -41,7 +42,7 @@
             </p>
         </div>
         <div
-            class="border-2 border-slate-200 rounded-xl h-full w-full relative hover:scale-125 hover:z-50 hover:shadow-2xl duration-500 hoverable">
+            class="border-2 border-slate-200 rounded-xl h-full w-full relative xl:hover:scale-125 xl:hover:z-50 xl:hover:shadow-2xl duration-500 hoverable">
             <img src="./img/divToolsPreview.png" class=" rounded-xl">
             <p
                 class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-100 bottom-0 w-full">
@@ -49,7 +50,7 @@
             </p>
         </div>
         <div
-            class="border-2 border-slate-200 rounded-xl h-full w-full relative hover:scale-125 hover:z-50 hover:shadow-2xl duration-500 hoverable">
+            class="border-2 border-slate-200 rounded-xl h-full w-full relative xl:hover:scale-125 xl:hover:z-50 xl:hover:shadow-2xl duration-500 hoverable">
             <img src="./img/textToolsPreview.png" class="rounded-xl">
             <p
                 class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-100 bottom-0 w-full">
@@ -57,7 +58,7 @@
             </p>
         </div>
         <div
-            class="border-2 border-slate-200 rounded-xl h-full w-full relative hover:scale-125 hover:z-50 hover:shadow-2xl duration-500 hoverable">
+            class="border-2 border-slate-200 rounded-xl h-full w-full relative xl:hover:scale-125 xl:hover:z-50 xl:hover:shadow-2xl duration-500 hoverable">
             <img src="./img/ImgToolsPreview.png" class="rounded-xl">
             <p
                 class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-100 bottom-0 w-full">
