[fix] 画像のところがリンクになってなかったので修正

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="./img/icon.svg" class="h-8 mx-8 md:mx-4">
             <span class="hidden md:inline mx-2">TailwindCSS Development Support Tools</span>
         </div>
-        <div class="flex place-items-center text-lg">
+        <div class="flex place-items-center text-lg mx-8">
             <a href="./html/usage/index.html"
                 class="px-3 py-1 sm:m-2 border-2 border-slate-100 bg-slate-100 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 transition duration-300  rounded-full border-solid">Usage</a>
             <a href="./html/divTools/index.html"
@@ -33,38 +33,38 @@
     </header>
 
     <div class="container px-8 mx-auto my-12 grid grid-cols-1 xl:grid-cols-2 gap-8 w-full" id="contentsBlocks">
-        <div
+        <a href="./html/usage/index.html"
             class="border-2 border-slate-200 rounded-xl h-full w-full relative xl:hover:scale-125 xl:hover:z-50 xl:hover:shadow-2xl duration-500 hoverable">
             <img src="./img/usagePreview.png" class="rounded-xl">
             <p
                 class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-100 bottom-0 w-full">
                 Usage
             </p>
-        </div>
-        <div
+        </a>
+        <a href="./html/divTools/index.html"
             class="border-2 border-slate-200 rounded-xl h-full w-full relative xl:hover:scale-125 xl:hover:z-50 xl:hover:shadow-2xl duration-500 hoverable">
             <img src="./img/divToolsPreview.png" class=" rounded-xl">
             <p
                 class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-100 bottom-0 w-full">
                 Div Tools
             </p>
-        </div>
-        <div
+        </a>
+        <a href="./html/textTools/index.html"
             class="border-2 border-slate-200 rounded-xl h-full w-full relative xl:hover:scale-125 xl:hover:z-50 xl:hover:shadow-2xl duration-500 hoverable">
             <img src="./img/textToolsPreview.png" class="rounded-xl">
             <p
                 class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-100 bottom-0 w-full">
                 Text Tools
             </p>
-        </div>
-        <div
+        </a>
+        <a href="./html/imgTools/index.html"
             class="border-2 border-slate-200 rounded-xl h-full w-full relative xl:hover:scale-125 xl:hover:z-50 xl:hover:shadow-2xl duration-500 hoverable">
             <img src="./img/ImgToolsPreview.png" class="rounded-xl">
             <p
                 class="absolute font-mono font-bold text-3xl bg-slate-200/90 text-slate-800 rounded-b-xl px-8 py-4 z-100 bottom-0 w-full">
                 Image Tools
             </p>
-        </div>
+        </a>
     </div>
     <script src="./js/blockHover.js"></script>
 </body>
